--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@font-face {
+  font-family: RomanSD;
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/RomanSD.ttf") format("truetype"); }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -883,7 +888,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "RomanSD";
   font-size: 14px;
   line-height: 1.428571429;
   color: #bc8761;
@@ -4785,7 +4790,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "RomanSD";
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -4880,7 +4885,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "RomanSD";
   font-size: 14px;
   font-weight: normal;
   line-height: 1.428571429;
@@ -5368,5 +5373,8 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
+.text-blur {
+  color: transparent;
+  text-shadow: 0 0 1px #bc8761; }
 
 /*# sourceMappingURL=main.css.map */
