--- a/public/main.css
+++ b/public/main.css
@@ -5379,8 +5379,12 @@ html, body {
 body > div.container-fluid {
   height: 100%; }
 
-.text-blur {
+h1.text-blur {
   color: transparent;
   text-shadow: 0 0 3px #bc8761; }
+
+h4.text-blur {
+  color: transparent;
+  text-shadow: 0 0 2.5px #bc8761; }
 
 /*# sourceMappingURL=main.css.map */
